Minimalize singleuser-sample

--- a/images/singleuser-sample/Dockerfile
+++ b/images/singleuser-sample/Dockerfile
@@ -3,25 +3,9 @@ FROM python:3.9-slim-bullseye
 # VULN_SCAN_TIME=
 
 ENV DEBIAN_FRONTEND=noninteractive \
-    LANG=en_US.UTF-8 \
-    LC_ALL=en_US.UTF-8 \
-    LANGUAGE=en_US.UTF-8 \
     NB_USER=jovyan \
     NB_UID=1000 \
     HOME=/home/jovyan
-
-RUN apt-get update \
- && apt-get upgrade -y \
- && apt-get install -y --no-install-recommends \
-        ca-certificates \
-        dnsutils \
-        git \
-        locales \
-        iputils-ping \
-        tini \
- && rm -rf /var/lib/apt/lists/* \
- && echo "en_US.UTF-8 UTF-8" > /etc/locale.gen \
- && locale-gen
 
 RUN adduser --disabled-password \
         --gecos "Default user" \
@@ -30,13 +14,22 @@ RUN adduser --disabled-password \
         --force-badname \
         ${NB_USER}
 
-USER $NB_USER
+RUN apt-get update \
+ && apt-get upgrade -y \
+ && apt-get install -y --no-install-recommends \
+        ca-certificates \
+        dnsutils \
+        git \
+        iputils-ping \
+        tini \
+ && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt /tmp/requirements.txt
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
 
-# nbgitpuller is installed in requirements.txt for demo purposes, and this
-# enables it to function.
-RUN jupyter serverextension enable --py nbgitpuller --sys-prefix
+WORKDIR ${HOME}
+USER ${NB_USER}
 
+EXPOSE 8888
 ENTRYPOINT ["tini", "--"]
+CMD ["jupyter", "lab"]
