--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,7 @@ jobs:
 
       - run:
           command: |
+            export DOCKER_BUILDKIT=1
             chartpress
           name: Run chartpress
 
