fix: add string type to cpu limit and guarantee in helm schema
Signed-off-by: wilmardo <info@wilmardenouden.nl>

--- a/tools/templates/lint-and-validate-values.yaml
+++ b/tools/templates/lint-and-validate-values.yaml
@@ -447,7 +447,7 @@ singleuser:
       storageAccessModes: [ReadWriteOnce]
   startTimeout: 300
   cpu:
-    guarantee: 0.2
+    guarantee: 100m
     limit: 4
   memory:
     guarantee: 1G
