Allow to disable proxy pod and service creation

--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -145,6 +145,7 @@ rbac:
 # proxy relates to the proxy pod, the proxy-public service, and the autohttps
 # pod and proxy-http service.
 proxy:
+  enabled: true
   secretToken:
   annotations: {}
   deploymentStrategy:
