--- a/jupyterhub/templates/proxy/service.yaml
+++ b/jupyterhub/templates/proxy/service.yaml
@@ -1,10 +1,12 @@
-{{- $enabled := .Values.proxy.https.enabled -}}
-{{- $autoHTTPS := and $enabled (and (eq .Values.proxy.https.type "letsencrypt") .Values.proxy.https.hosts) -}}
-{{- $manualHTTPS := and $enabled (eq .Values.proxy.https.type "manual") -}}
-{{- $manualHTTPSwithsecret := and $enabled (eq .Values.proxy.https.type "secret") -}}
-{{- $offloadHTTPS := and $enabled (eq .Values.proxy.https.type "offload") -}}
+{{- $enabled := .Values.proxy.enabled -}}
+{{- if $enabled }}
+{{- $httpsEnabled := .Values.proxy.https.enabled -}}
+{{- $autoHTTPS := and $httpsEnabled (and (eq .Values.proxy.https.type "letsencrypt") .Values.proxy.https.hosts) -}}
+{{- $manualHTTPS := and $httpsEnabled (eq .Values.proxy.https.type "manual") -}}
+{{- $manualHTTPSwithsecret := and $httpsEnabled (eq .Values.proxy.https.type "secret") -}}
+{{- $offloadHTTPS := and $httpsEnabled (eq .Values.proxy.https.type "offload") -}}
 {{- $valid := or $autoHTTPS (or $manualHTTPS (or $manualHTTPSwithsecret $offloadHTTPS)) -}}
-{{- $HTTPS := and $enabled $valid -}}
+{{- $HTTPS := and $httpsEnabled $valid -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -78,3 +80,4 @@ spec:
     {{- . | toYaml | nindent 4 }}
   {{- end }}
   {{- end }}
+{{- end }}
