--- a/tools/templates/lint-and-validate-values.yaml
+++ b/tools/templates/lint-and-validate-values.yaml
@@ -477,7 +477,7 @@ scheduling:
     plugins:
       score:
         disabled:
-          - name: SelectorSpread
+          - name: PodTopologySpread
         enabled:
           - name: NodePreferAvoidPods
             weight: 161051
