--- a/jupyterhub/templates/scheduling/user-scheduler/configmap.yaml
+++ b/jupyterhub/templates/scheduling/user-scheduler/configmap.yaml
@@ -8,23 +8,28 @@ metadata:
 data:
   {{- /*
     This is configuration of a k8s official kube-scheduler binary running in the
-    user-scheduler pod.
+    user-scheduler.
+
+    The config version and kube-scheduler binary version has a fallback for k8s
+    clusters versioned v1.23 or lower because:
+
+    - v1 / v1beta3 config requires kube-scheduler binary >=1.25 / >=1.23
+    - kube-scheduler binary >=1.25 requires storage.k8s.io/v1/CSIStorageCapacity
+      available first in k8s >=1.24
 
     ref: https://kubernetes.io/docs/reference/scheduling/config/
-    ref: https://kubernetes.io/docs/reference/config-api/kube-scheduler-config.v1beta3/
     ref: https://kubernetes.io/docs/reference/config-api/kube-scheduler-config.v1/
-
-    kubescheduler.config.k8s.io/v1beta3 requires kube-scheduler binary version >=1.23
-    kubescheduler.config.k8s.io/v1 requires kube-scheduler binary version >=1.25
-
-    FIXME: Add logic to transition from v1beta3 to v1 if its supported.
-           v1beta3 is likeley to be removed in k8s 1.27.
+    ref: https://kubernetes.io/docs/reference/config-api/kube-scheduler-config.v1beta3/
   */}}
   config.yaml: |
+    {{- if semverCompare ">=1.24.0-0" .Capabilities.KubeVersion.Version }}
+    apiVersion: kubescheduler.config.k8s.io/v1
+    {{- else }}
     apiVersion: kubescheduler.config.k8s.io/v1beta3
+    {{- end }}
     kind: KubeSchedulerConfiguration
     leaderElection:
-      resourceLock: endpoints
+      resourceLock: endpointsleases
       resourceName: {{ include "jupyterhub.user-scheduler-lock.fullname" . }}
       resourceNamespace: "{{ .Release.Namespace }}"
     profiles:
