--- a/jupyterhub/templates/proxy/deployment.yaml
+++ b/jupyterhub/templates/proxy/deployment.yaml
@@ -6,6 +6,9 @@ metadata:
   name: {{ include "jupyterhub.proxy.fullname" . }}
   labels:
     {{- include "jupyterhub.labels" . | nindent 4 }}
+    {{- with .Values.proxy.labels }}
+    {{- . | toYaml | nindent 4 }}
+    {{- end }}
 spec:
   {{- if typeIs "int" .Values.proxy.chp.revisionHistoryLimit }}
   revisionHistoryLimit: {{ .Values.proxy.chp.revisionHistoryLimit }}
