--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -623,6 +623,17 @@ prePuller:
       annotations: {}
   continuous:
     enabled: true
+  taintmanager:
+    enabled: true
+    image:
+      name: lthub/taintmanager
+      tag: master
+    # taint/tolerations used for preventing user pods being scheduled while user image is being pulled
+    # only first element in the list is being used
+    tolerations:
+      - key: hub.jupyter.org/imagepulling
+        operator: Exists
+        effect: NoExecute
   pullProfileListImages: true
   extraImages: {}
   pause:
