--- a/jupyterhub/templates/image-puller/rbac.yaml
+++ b/jupyterhub/templates/image-puller/rbac.yaml
@@ -42,4 +42,40 @@ roleRef:
   name: {{ include "jupyterhub.hook-image-awaiter.fullname" . }}
   apiGroup: rbac.authorization.k8s.io
 {{- end }}
+{{- if .Values.prePuller.taintmanager.enabled }}
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: taintmanager
+  namespace: "{{ .Release.Namespace }}"
+  labels:
+    {{- include "jupyterhub.labels" . | nindent 4 }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: taintmanager
+  labels:
+    {{- include "jupyterhub.labels" . | nindent 4 }}
+rules:
+- apiGroups: [""] # "" indicates the core API group
+  resources: ["nodes"]
+  verbs: ["get", "update"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: taintmanager
+  labels:
+    {{- include "jupyterhub.labels" . | nindent 4 }}
+subjects:
+- kind: ServiceAccount
+  name: taintmanager
+  namespace: "{{ .Release.Namespace }}"
+roleRef:
+  kind: ClusterRole
+  name: taintmanager
+  apiGroup: rbac.authorization.k8s.io
+{{- end }}
 {{- end }}
