pre-commit.ci: update monthly

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,6 +36,7 @@ repos:
           - --target-version=py38
           - --target-version=py39
           - --target-version=py310
+          - --target-version=py311
 
   # Autoformat: Python code
   - repo: https://github.com/pycqa/isort
@@ -76,3 +77,7 @@ repos:
         args:
           - --ignore=E,C,W
           - --builtins=c
+
+# pre-commit.ci config reference: https://pre-commit.ci/#configuration
+ci:
+  autoupdate_schedule: monthly
