Add taintmanager toleration to core pods

--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -573,6 +573,9 @@ scheduling:
         operator: Equal
         value: core
         effect: NoSchedule
+      - key: hub.jupyter.org/imagepulling
+        operator: Exists
+        effect: NoExecute
     nodeAffinity:
       matchNodePurpose: prefer
   userPods:
