--- a/jupyterhub/values.schema.yaml
+++ b/jupyterhub/values.schema.yaml
@@ -2847,6 +2847,20 @@ properties:
         properties:
           enabled:
             type: boolean
+      taintmanager:
+        type: object
+        additionalProperties: false
+        required: [enabled]
+        description: |
+          Manage the taints during the single user image prepulling. It will add
+          sepcified taint before image pulling and remove it after it's done.
+          This will prevent user pods being scheduled on the new node that doesn't
+          have user image in order to prevent long user wait.
+        properties:
+          enabled:
+            type: boolean
+          image: *image-spec
+          tolerations: *tolerations-spec
       pullProfileListImages:
         type: boolean
         description: |
