Add taint manager
The taint manager is a go binary to add/remove taint for a node.

--- a/chartpress.yaml
+++ b/chartpress.yaml
@@ -58,3 +58,7 @@ charts:
       # singleuser-sample, a primitive user container to start with.
       singleuser-sample:
         valuesPath: singleuser.image
+
+      # taint-manager, an initContainer to add/remove taint for a node
+      taint-manager:
+        valuesPath: prePuller.taintmanager.image
