Add appLable to proxy service

--- a/jupyterhub/templates/proxy/service.yaml
+++ b/jupyterhub/templates/proxy/service.yaml
@@ -41,6 +41,7 @@ spec:
     component: proxy
     {{- end }}
     release: {{ .Release.Name }}
+    app: {{ .appLabel | default (include "jupyterhub.appLabel" .) }}
   ports:
     {{- if $HTTPS }}
     - name: https
