--- a/images/singleuser-sample/Dockerfile
+++ b/images/singleuser-sample/Dockerfile
@@ -7,12 +7,16 @@
 # This stage is building Python wheels for use in later stages by using a base
 # image that has more pre-requisites to do so, such as a C++ compiler.
 #
+# NOTE: If the image version is updated, also update it in ci/refreeze and
+#       hub's Dockerfile!
+#
 FROM python:3.11-bullseye as build-stage
 
 # Build wheels
 #
 # We set pip's cache directory and expose it across build stages via an
-# ephemeral docker cache (--mount=type=cache,target=${PIP_CACHE_DIR}).
+# ephemeral docker cache (--mount=type=cache,target=${PIP_CACHE_DIR}). We use
+# the same technique for the directory /tmp/wheels.
 #
 COPY requirements.txt requirements.txt
 ARG PIP_CACHE_DIR=/tmp/pip-cache
