Summarise linkcheck CI output
It takes too long to read through the entire output to find out what needs fixing

--- a/.github/workflows/test-docs.yaml
+++ b/.github/workflows/test-docs.yaml
@@ -43,3 +43,8 @@ jobs:
         run: |
           cd docs
           make linkcheck SPHINXOPTS='--color -W --keep-going'
+
+      - name: summarise linkcheck issues
+        if: always()
+        run: |
+          ./ci/summarise-linkcheck-output ./docs/_build/linkcheck/output.json
