compile psycopg2 in hub image
psycopg2-binary is not recommended for production

--- a/images/hub/Dockerfile
+++ b/images/hub/Dockerfile
@@ -55,6 +55,8 @@ RUN apt-get update \
  && apt-get install -y --no-install-recommends \
         # requirement for pycurl
         libcurl4 \
+        # requirement for using postgres database
+        libpq5 \
         # requirement for using a local sqlite database
         sqlite3 \
         tini \
