--- a/images/hub/requirements.in
+++ b/images/hub/requirements.in
@@ -28,7 +28,7 @@ jupyterhub-kubespawner
 
 ## Other optional dependencies for additional features
 pymysql  # mysql
-psycopg2-binary  # postgres
+psycopg2  # postgres
 pycurl  # internal http requests handle more load with pycurl
 sqlalchemy-cockroachdb # cocroachdb
 statsd  # statsd metrics collection (TODO: remove soon, since folks use prometheus)
