--- a/.github/workflows/support-bot.yml
+++ b/.github/workflows/support-bot.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   action:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: dessant/support-requests@v3
         with:
