--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -503,9 +503,10 @@ scheduling:
       # tag is automatically bumped to new patch versions by the
       # watch-dependencies.yaml workflow. The minor version is pinned in the
       # workflow, and should be updated there if a minor version bump is done
-      # here.
+      # here. We aim to stay around 1 minor version behind the latest k8s
+      # version.
       #
-      tag: "v1.25.9" # ref: https://github.com/kubernetes/website/blob/main/content/en/releases/patch-releases.md
+      tag: "v1.26.4" # ref: https://github.com/kubernetes/kubernetes/tree/master/CHANGELOG
       pullPolicy:
       pullSecrets: []
     nodeSelector: {}
