--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -716,10 +716,10 @@ ingress:
 
 httpRoute:
   enabled: false
-  gateway:
-    name:
-    namespace:
   hostnames: []
+  gateway:
+    name: your-gateway
+    namespace: namespace-for-your-gateway
 
 # cull relates to the jupyterhub-idle-culler service, responsible for evicting
 # inactive singleuser pods.
