--- a/jupyterhub/templates/examapi/secrets.yaml
+++ b/jupyterhub/templates/examapi/secrets.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.examapi.enabled -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -7,6 +8,4 @@ metadata:
 type: Opaque
 data:
   exam-api-key: {{ .Values.examapi.apiKey | b64enc | quote }}
-
-
-
+{{- end }}
