--- a/jupyterhub/templates/examapi/deployment.yaml
+++ b/jupyterhub/templates/examapi/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.examapi.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -80,43 +81,4 @@ spec:
       - name: jupyterhub-efs
         persistentVolumeClaim:
          claimName: {{ include "jupyterhub.examapi.fullname" . }}
----
-
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: {{ include "jupyterhub.examapi.fullname" . }}
-spec:
-  capacity:
-    storage: 5Gi
-  volumeMode: Filesystem
-  accessModes:
-    - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: {{ .Values.examapi.storageClassName }}
-  csi:
-    driver: efs.csi.aws.com
-    volumeHandle: {{ .Values.examapi.efsHandle }}
-
----
-
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: {{ include "jupyterhub.examapi.fullname" . }}
-spec:
-  accessModes:
-    - ReadWriteMany
-  storageClassName: {{ .Values.examapi.storageClassName }}
-  resources:
-    requests:
-      storage: 5Gi
-
-{{- if .Values.examapi.createStorageClass }}
----
-kind: StorageClass
-apiVersion: storage.k8s.io/v1
-metadata:
-  name: {{ .Values.examapi.storageClassName }}
-provisioner: efs.csi.aws.com
 {{- end }}
