--- a/jupyterhub/templates/examapi/service.yaml
+++ b/jupyterhub/templates/examapi/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.examapi.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -31,3 +32,4 @@ spec:
       {{- with .Values.examapi.service.ports.nodePort }}
       nodePort: {{ . }}
       {{- end }}
+{{- end }}
