Hard code PVC name as efs
As we can't use variable in values.yaml

--- a/jupyterhub/templates/examapi/deployment.yaml
+++ b/jupyterhub/templates/examapi/deployment.yaml
@@ -80,5 +80,5 @@ spec:
       volumes:
       - name: jupyterhub-efs
         persistentVolumeClaim:
-         claimName: {{ include "jupyterhub.examapi.fullname" . }}
+         claimName: efs
 {{- end }}
