to support multiple exam env

--- a/jupyterhub/templates/examapi/deployment.yaml
+++ b/jupyterhub/templates/examapi/deployment.yaml
@@ -80,5 +80,5 @@ spec:
       volumes:
       - name: jupyterhub-efs
         persistentVolumeClaim:
-         claimName: efs
+         claimName: {{ .Values.examapi.persistentVolumeClaimName }}
 {{- end }}
