fix(daemonset): Allow the creation of Service Accounts

--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -618,7 +618,7 @@ prePuller:
     tolerations: []
     resources: {}
     serviceAccount:
-      create: true
+      create: false
       name:
       annotations: {}
   continuous:
